--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -18,8 +18,12 @@
   padding: 20px 10px;
 }
 
-.Item-price {
+.Item-price,
+.Item-count {
   padding: 20px 10px;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: right;
 }
 
 .Item-actions {
@@ -30,4 +34,5 @@
 
 .Item-btn {
   width: 76px;
+  height: 22px;
 }
