--- a/src/components/summary/style.css
+++ b/src/components/summary/style.css
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: flex-end;
   border-bottom: 1px dashed #ccc;
+  font-size: 18px;
+  line-height: 21px;
 }
 
 .Summary-content {
