--- a/src/components/page-layout/style.css
+++ b/src/components/page-layout/style.css
@@ -2,7 +2,11 @@ body {
   margin: 0;
   padding: 0;
   background: #535353;
-  font-family: sans-serif;
+  font-family: 'Arial', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
 }
 
 .PageLayout {
