--- a/src/components/cart/style.css
+++ b/src/components/cart/style.css
@@ -12,6 +12,7 @@
   background: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
+  box-sizing: border-box;
 }
 
 .Cart-head {
@@ -20,6 +21,7 @@
   align-items: center;
   background: #f5f5f5;
   height: 80px;
+  margin-bottom: 71px;
   padding: 0 32px 0 20px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -28,6 +30,7 @@
 .Cart-title {
   font-size: 32px;
   line-height: 37px;
+  margin: 0;
 }
 
 .Cart-btn {
