--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: flex-start;
   transition: background-color 1s;
-  padding-left: 10px
+  padding-left: 10px;
+  cursor: pointer;
 }
 
 .Item_selected {
@@ -24,7 +25,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 20px
+  gap: 20px;
 }
 
 .Item-price {
