--- a/src/components/nav/style.css
+++ b/src/components/nav/style.css
@@ -1,9 +1,8 @@
 .Nav {
-  height: 80px;
-  background: #f5f5f5;
 }
 
 .Nav-link {
-  margin: 0;
-  padding: 20px 20px 10px;
+  color: #0087e9;
+  text-decoration: none;
+  border-bottom: 1px solid #0087e9;
 }
