--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -3,7 +3,6 @@
   justify-content: flex-start;
   transition: background-color 1s;
   padding-left: 10px;
-  cursor: pointer;
 }
 
 .Item_selected {
@@ -12,16 +11,27 @@
 }
 
 .Item-code {
-  padding: 20px 10px 20px 20px;
+  padding: 20px 10px 19px 20px;
 }
 
 .Item-title {
   width: 100%;
-  padding: 20px 10px;
+  padding: 21px 10px 19px;
+  line-height: 18px;
+}
+
+.Item-link {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.Item-link:hover {
+  border-bottom: 1px solid #000000;
+  text-decoration: none;
 }
 
 .Item-actions {
-  padding: 20px 20px 20px 10px;
+  padding: 20px 20px 19px 10px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
