--- a/src/components/page-layout/style.css
+++ b/src/components/page-layout/style.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   padding: 0;
   background: #535353;
-  font-family: sans-serif;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
 }
 
 .PageLayout {
