--- a/src/components/pagination/style.css
+++ b/src/components/pagination/style.css
@@ -5,7 +5,8 @@
   justify-content: flex-end;
   font-size: 16px;
   line-height: 18px;
-  padding: 22px 20px 11px 0;
+  padding: 24px 20px 11px 0;
+  user-select: none;
 }
 
 .Pagination-link {
@@ -13,10 +14,10 @@
   justify-content: center;
   align-items: center;
   height: 20px;
+  padding: 0 1px;
   min-width: 20px;
   text-decoration: none;
   color: #000000;
-  transition: 0.3s;
   cursor: pointer;
 }
 
