--- a/src/app/article/style.css
+++ b/src/app/article/style.css
@@ -2,5 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 10px;
+  padding-left: 20px;
+  margin-bottom: 23px;
+}
+
+.Article-controls button {
+  width: 80px;
 }
