--- a/src/components/article-info/style.css
+++ b/src/components/article-info/style.css
@@ -12,4 +12,10 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+  margin-top: -3px;
+}
+
+.ArticleInfo-price b {
+  display: inline-block;
+  margin-left: 8px;
 }
