--- a/src/components/basket-total/style.css
+++ b/src/components/basket-total/style.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: flex-end;
   padding: 20px;
+  padding-bottom: 0;
 }
 
 .BasketTotal-cell {
@@ -13,4 +14,3 @@
   padding-left: 10px;
   white-space: nowrap;
 }
-
