--- a/src/components/modal-layout/style.css
+++ b/src/components/modal-layout/style.css
@@ -1,4 +1,4 @@
-body:has(.ModalLayout){
+body:has(.ModalLayout) {
   overflow: hidden;
 }
 
@@ -9,7 +9,7 @@ body:has(.ModalLayout){
   width: 100%;
   height: 100%;
   overflow-x: auto;
-  background: rgba(0,0,0,0.7);
+  background: rgba(0, 0, 0, 0.7);
   z-index: 9999;
   padding: 10px;
   min-height: 100%;
@@ -40,16 +40,17 @@ body:has(.ModalLayout){
   padding: 0 30px 0 20px;
 }
 
-.ModalLayout-close{
+.ModalLayout-close {
   align-self: center;
+  width: 76px;
 }
 
-.ModalLayout-title{
+.ModalLayout-title {
   margin: 0;
   padding: 20px 0 10px;
 }
 
 .ModalLayout-content {
   min-height: 100px;
-  padding: 70px 0;
+  padding: 62px 0 77px;
 }
