refactor: добавил компонент для навигации и basket-tool

--- a/src/components/article-info/style.css
+++ b/src/components/article-info/style.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: flex-start;
   row-gap: 20px;
-  padding: 0 40px;
+  padding: 19px 40px 0;
   font-size: 18px;
   line-height: 21px;
 }
