--- a/src/components/basket-tool/style.css
+++ b/src/components/basket-tool/style.css
@@ -2,11 +2,11 @@
 .BasketTool {
   display: flex;
   justify-content: flex-end;
-  padding: 20px;
   font-size: 18px;
 }
 
-.BasketTool-label {
+.BasketTool-btn_large {
+  width: 80px;
 }
 
 .BasketTool-total {
