--- a/src/components/container-space-between/style.css
+++ b/src/components/container-space-between/style.css
@@ -1,6 +1,7 @@
-.main-controls {
+.ContainerSpaceBetween {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 20px;
+  padding: 0 20px;
+  height: 63px;
 }
