--- a/src/components/pagination/style.css
+++ b/src/components/pagination/style.css
@@ -5,7 +5,7 @@
   justify-content: flex-end;
   font-size: 16px;
   line-height: 18px;
-  padding: 24px 20px 11px 0;
+  padding: 22px 20px 11px 0;
   user-select: none;
 }
 
@@ -38,4 +38,5 @@
 .Pagination-points {
   color: #cccccc;
   cursor: default;
+  width: 20px;
 }
