--- a/src/components/header-nav/style.css
+++ b/src/components/header-nav/style.css
@@ -1,12 +1,17 @@
-.LoginBtn {
-  width: 47px;
-  height: 21px;
-  background: #efefef;
-  border: 1px solid #767676;
-  border-radius: 2px;
+.HeaderNav {
+  display: flex;
+  column-gap: 20px;
+  align-items: center;
+  font-size: 13px;
+  line-height: 15px;
+}
+
+.HeaderNav-btn {
+  min-width: 59px;
   cursor: pointer;
 }
 
-.LoginBtn:hover {
+.HeaderNav-btn:hover {
   background: #0000ff;
+  color: #ffffff;
 }
