--- a/src/components/form/style.css
+++ b/src/components/form/style.css
@@ -2,12 +2,18 @@
   display: flex;
   flex-direction: column;
   padding-left: 20px;
+  width: 100%;
   max-width: 203px;
   row-gap: 19px;
 }
 
+.Form-input {
+  width: 196px;
+  height: 20px;
+}
+
 .Form-title {
-  margin: 62px 0 36px;
+  margin: 37px 0 18px;
   padding-left: 20px;
 }
 
