--- a/src/components/select/style.css
+++ b/src/components/select/style.css
@@ -1,4 +1,10 @@
-.Select{
+.Select {
   font-size: 16px;
   padding: 3px 2px 2px;
+}
+.Select_category {
+  width: 161px;
+}
+.Select_sort {
+  width: 157px;
 }
