--- a/src/components/page-layout/style.css
+++ b/src/components/page-layout/style.css
@@ -15,9 +15,11 @@ body {
 }
 
 .PageLayout-head {
+  box-sizing: border-box;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   height: 41px;
   padding: 0 20px;
+  border-bottom: 1px solid #dcdcdc;
 }
