feat: вложенность сообщений

--- a/src/components/article-card/style.css
+++ b/src/components/article-card/style.css
@@ -5,24 +5,25 @@
 .ArticleCard-description {
   font-size: 18px;
   margin: 20px 0;
+  margin-top: 0px;
 }
 
 .ArticleCard-prop {
   margin: 20px 0;
   display: flex;
   justify-content: flex-start;
-  font-size: 18px
+  font-size: 18px;
 }
 
-.ArticleCard-prop_size_big{
+.ArticleCard-prop_size_big {
   font-size: 24px;
   font-weight: bold;
 }
 
-.ArticleCard-label{
+.ArticleCard-label {
   padding-right: 10px;
 }
 
-.ArticleCard-value{
+.ArticleCard-value {
   font-weight: bold;
 }
