--- a/src/components/reply-form/style.css
+++ b/src/components/reply-form/style.css
@@ -1,9 +1,12 @@
 .ReplyForm {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 100%;
+  padding-top: 30px;
+  padding-left: 30px;
   font-size: 16px;
-  padding: 0 40px;
   row-gap: 10px;
 }
 
@@ -16,6 +19,7 @@
 }
 
 .ReplyForm-input {
+  box-sizing: border-box;
   width: 100%;
   height: 76px;
   overflow-y: auto;
