--- a/src/components/comments-item/style.css
+++ b/src/components/comments-item/style.css
@@ -14,7 +14,7 @@
   padding: 0;
   padding-right: 10px;
   margin: 0;
-  word-break: normal;
+  overflow-wrap: break-word;
 }
 
 .CommentsItem-name {
